Fix: placement of submit button to fit on mobile devices properly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ h1, h2 {
 p {
   font-size: 16px;
   margin: 0 auto;
-  padding: 0px 20px 20px;
+  padding: 0px 20px 15px;
 }
 
 p span {
